# NeuroGlyph

./: .gitignore  README.md  cert.pem  compiler.proto  pyproject.toml
experiments/: .gitignore  adversarial.py  base.py  tasks.py  unit.py
src/: compiler_pb2.py  compiler_pb2_grpc.py  language_server_interop.py  main.py
src/compiler_client/: fetchers.py  language_spec.py  responses.py
src/generator/: code_generator.py  gemma3_code_generator.py  system_prompt.py  weight_engine.py
src/model/: language_spec.py  requests.py  responses.py
src/models/: registry.py  spec.py
src/proto/: compiler_pb2.py  compiler_pb2_grpc.py
src/semantics/: semantic_hints.py
src/syntax/: fixed_token_trie.py  lexer_machine_runner.py  mask_engine.py
src/syntax_engine/: lexer_machine_runner.py  mask_engine.py  masking.py
src/tools/: gen_grpc.py
tests/: test_fixed_token_trie.py  test_lexer_machine_runner.py  test_masking_baseline.py
