[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroglyph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.4",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
gen-grpc = "tools.gen_grpc:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]
